made some litle changes

--- a/www/index.html
+++ b/www/index.html
@@ -38,7 +38,7 @@
         <style>
             body{
                 max-width: 80vw;
-                margin: auto;
+                margin: 1rem auto;
                 background-image: linear-gradient(to bottom, #A7A7A7 0%, #E4E4E4 51%);
             }
             h1{
